--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-email/components": "^0.0.19",
+    "@react-email/render": "^0.0.15",
     "@react-email/tailwind": "^0.0.18",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
