--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-email/components": "^0.0.19",
     "@react-email/render": "^0.0.15",
     "@react-email/tailwind": "^0.0.18",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
